--- a/index.html
+++ b/index.html
@@ -1030,7 +1030,7 @@
         }
 
         .testimonial-quote {
-            font-family: 'Cormorant Garamond', serif;
+            font-family: 'Lato', sans-serif;
             font-size: 1.15rem;
             font-style: italic;
             color: rgba(255,255,255,0.9);
@@ -1039,7 +1039,7 @@
         }
 
         .testimonial-author {
-            font-family: 'Montserrat', sans-serif;
+            font-family: 'Lato', sans-serif;
             font-size: 1.5rem;
             color: var(--soft-gold);
         }
@@ -2221,83 +2221,6 @@
         </div>
     </section>
 
-    <!-- Experience Cards -->
-    <section class="experience">
-        <div class="experience-header">
-            <p class="section-script">What Awaits You</p>
-            <h2 class="section-title">Three Pillars of <em>Presence</em></h2>
-        </div>
-        <div class="experience-grid">
-            <div class="exp-card">
-                <img src="IMG_7532.webp" alt="Luxury resort pool at sunset"/>
-                <div class="exp-card-overlay">
-                    <h3 class="exp-card-title">Luxury Meets Wellness</h3>
-                    <p class="exp-card-desc">Five star island living, beachfront villas & a vibrant house reef</p>
-                </div>
-            </div>
-            <div class="exp-card">
-                <img src="IMG_9629.webp" alt="Intimate yoga moment on beach"/>
-                <div class="exp-card-overlay">
-                    <h3 class="exp-card-title">Founder-Led Journey</h3>
-                    <p class="exp-card-desc">Personal, modern, music-driven practice</p>
-                </div>
-            </div>
-            <div class="exp-card">
-                <img src="IMG_7534.webp" alt="Beach dining at sunset"/>
-                <div class="exp-card-overlay">
-                    <h3 class="exp-card-title">Depth & Enjoyment</h3>
-                    <p class="exp-card-desc">Calm and celebration, woven together</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Founder Section -->
-    <section class="founder" id="founder">
-        <div class="founder-content">
-            <p class="section-script">Meet Your Host</p>
-            <h2 class="section-title">Lina Aoun</h2>
-            <p class="body-text">
-                Founder of Yogi Nomads and a 200-hr certified Sivananda yoga teacher. 
-                Her teaching style is contemporary, grounded, innovative and beautifully woven with music — 
-                designed to support both beginners and advanced practitioners.
-            </p>
-            <p class="body-text">
-                With over 5 years of experience hosting retreats across the globe, 
-                Lina builds every escape like a life chapter: layered, rich, full of color and clarity. 
-                Every Yogi Nomads journey she creates is meticulously planned down to the tiniest detail — 
-                not just where you'll go, but how you'll feel when you get there. 
-                Her work blends yoga, travel, self-inquiry, and curated community — 
-                not to disconnect from life, but to re-enter it differently.
-            </p>
-            <p class="body-text">
-                You won't just remember the places she takes you to. You'll remember every class with her
-            </p>
-            <div class="founder-stats">
-                <div class="stat">
-                    <div class="stat-number">8,000+</div>
-                    <div class="stat-label">Hours Teaching</div>
-                </div>
-                <div class="stat">
-                    <div class="stat-number">150+</div>
-                    <div class="stat-label">Retreats Hosted</div>
-                </div>
-                <div class="stat">
-                    <div class="stat-number">10+</div>
-                    <div class="stat-label">Years Experience</div>
-                </div>
-            </div>
-            <div class="founder-instagram">
-                <a href="https://www.instagram.com/fromyogatolina/" target="_blank" rel="noopener">
-                    <i class="fa-brands fa-instagram"></i>
-                </a>
-            </div>
-        </div>
-        <div class="founder-image">
-            <img src="DSC07062.webp" alt="Lina Aoun leading yoga on beach"/>
-        </div>
-    </section>
-
     <!-- Daily Flow -->
     <section class="daily-flow">
         <div class="daily-flow-header">
@@ -2336,8 +2259,8 @@
     <!-- Testimonials -->
     <section class="testimonials">
         <div class="testimonials-header">
-            <p class="section-script">Guest Experiences</p>
-            <h2 class="section-title">Real words from our <em>previous Maldives edition</em></h2>
+            <p class="section-script">A Proven Yogi Nomads Experience</p>
+            <h2 class="section-title" style="font-size: clamp(1rem, 2vw, 1.6rem);">Previous Maldives Edition — SOLD OUT with 40 international guests</h2>
         </div>
         <div class="testimonials-grid">
             <div class="testimonial-card">
@@ -2406,6 +2329,83 @@
                     <button class="slideshow-arrow" id="video-next" aria-label="Next video">
                         <i class="fa-solid fa-chevron-right"></i>
                     </button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Founder Section -->
+    <section class="founder" id="founder">
+        <div class="founder-content">
+            <p class="section-script">Meet Your Host</p>
+            <h2 class="section-title">Lina Aoun</h2>
+            <p class="body-text">
+                Founder of Yogi Nomads and a 200-hr certified Sivananda yoga teacher. 
+                Her teaching style is contemporary, grounded, innovative and beautifully woven with music — 
+                designed to support both beginners and advanced practitioners.
+            </p>
+            <p class="body-text">
+                With over 5 years of experience hosting retreats across the globe, 
+                Lina builds every escape like a life chapter: layered, rich, full of color and clarity. 
+                Every Yogi Nomads journey she creates is meticulously planned down to the tiniest detail — 
+                not just where you'll go, but how you'll feel when you get there. 
+                Her work blends yoga, travel, self-inquiry, and curated community — 
+                not to disconnect from life, but to re-enter it differently.
+            </p>
+            <p class="body-text">
+                You won't just remember the places she takes you to. You'll remember every class with her
+            </p>
+            <div class="founder-stats">
+                <div class="stat">
+                    <div class="stat-number">8,000+</div>
+                    <div class="stat-label">Hours Teaching</div>
+                </div>
+                <div class="stat">
+                    <div class="stat-number">150+</div>
+                    <div class="stat-label">Retreats Hosted</div>
+                </div>
+                <div class="stat">
+                    <div class="stat-number">10+</div>
+                    <div class="stat-label">Years Experience</div>
+                </div>
+            </div>
+            <div class="founder-instagram">
+                <a href="https://www.instagram.com/fromyogatolina/" target="_blank" rel="noopener">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            </div>
+        </div>
+        <div class="founder-image">
+            <img src="DSC07062.webp" alt="Lina Aoun leading yoga on beach"/>
+        </div>
+    </section>
+
+    <!-- Experience Cards -->
+    <section class="experience">
+        <div class="experience-header">
+            <p class="section-script">What Awaits You</p>
+            <h2 class="section-title">Three Pillars of <em>Presence</em></h2>
+        </div>
+        <div class="experience-grid">
+            <div class="exp-card">
+                <img src="IMG_7532.webp" alt="Luxury resort pool at sunset"/>
+                <div class="exp-card-overlay">
+                    <h3 class="exp-card-title">Luxury Meets Wellness</h3>
+                    <p class="exp-card-desc">Five star island living, beachfront villas & a vibrant house reef</p>
+                </div>
+            </div>
+            <div class="exp-card">
+                <img src="IMG_9629.webp" alt="Intimate yoga moment on beach"/>
+                <div class="exp-card-overlay">
+                    <h3 class="exp-card-title">Founder-Led Journey</h3>
+                    <p class="exp-card-desc">Personal, modern, music-driven practice</p>
+                </div>
+            </div>
+            <div class="exp-card">
+                <img src="IMG_7534.webp" alt="Beach dining at sunset"/>
+                <div class="exp-card-overlay">
+                    <h3 class="exp-card-title">Depth & Enjoyment</h3>
+                    <p class="exp-card-desc">Calm and celebration, woven together</p>
                 </div>
             </div>
         </div>
