--- a/index.html
+++ b/index.html
@@ -1340,9 +1340,9 @@
             background: linear-gradient(90deg, var(--deep-teal), var(--ocean));
             color: white;
             padding: 0.6rem;
-            font-family: 'Cormorant Garamond', serif;
-            font-size: 0.95rem;
-            font-style: italic;
+            font-family: 'Poppins', sans-serif;
+            font-size: 1.0925rem;
+            font-style: normal;
         }
 
         .pricing-amount {
@@ -1395,6 +1395,7 @@
             display: flex;
             gap: 1rem;
             margin-top: 2rem;
+            padding-top: 3rem;
         }
 
         .pricing-cta {
@@ -1403,9 +1404,12 @@
             align-items: center;
             justify-content: center;
             gap: 0.75rem;
+            text-align: center;
+            white-space: normal;
+            line-height: 1.4;
             padding: 1.1rem 1.5rem;
             border-radius: 50px;
-            font-family: 'Cormorant Garamond', serif;
+            font-family: 'Poppins', sans-serif;
             font-size: 1.1rem;
             text-decoration: none;
             transition: all 0.3s ease;
@@ -2709,28 +2713,26 @@
     <!-- Pricing Section -->
     <section class="pricing" id="pricing">
         <div class="pricing-header">
-            <p class="section-script">Your Investment</p>
             <h2 class="section-title">Reserve Your <em>Journey</em></h2>
         </div>
         <div class="pricing-card">
             <div class="pricing-badge">
-                Early Confirmation — Pay before January 30, 2026 for a chance to win $500 credit
-            </div>
-            <div class="pricing-amount">
-                <div class="pricing-current">$2,175 <span>USD</span></div>
-                <div class="pricing-per">per person</div>
-            </div>
-            <div class="pricing-details">
-                <p class="pricing-detail">30% non-refundable deposit to confirm your spot</p>
-                <p class="pricing-detail">Remaining 70% due 45 days before retreat</p>
+                Complete full payment before January 31 & enter the draw to Win this retreat back!
             </div>
             <div class="pricing-ctas">
-                <a href="#" class="pricing-cta pricing-cta-secondary" onclick="openBookingForm('30% Deposit', 'https://yoginomads.eu/cart/51493883937051:1?checkout'); return false;">
-                    Pay 30% Deposit
-                </a>
                 <a href="#" class="pricing-cta pricing-cta-primary" onclick="openBookingForm('Full Payment', 'https://yoginomads.eu/cart/51493884985627:1?checkout'); return false;">
-                    Pay it Fully - Enter the Draw
+                    Pay it Fully
                 </a>
+                <a href="#" class="pricing-cta pricing-cta-secondary" onclick="openBookingForm('30% Deposit', 'https://yoginomads.eu/cart/51493883937051:1?checkout'); return false;">
+                    Secure your Spot with 30%
+                </a>
+            </div>
+            <p style="text-align: center; margin-top: 2rem; margin-bottom: 1rem; font-size: 0.9rem; color: var(--warm-taupe); font-family: 'Poppins', sans-serif;">
+                confirm your spot & complete payment 45 days before retreat begins
+            </p>
+            <div class="pricing-amount" style="margin-top: 1.5rem; padding-top: 2rem; border-top: 1px solid var(--sand);">
+                <div class="pricing-current">$2,175 <span>USD</span></div>
+                <div class="pricing-per">per person</div>
             </div>
             <p class="pricing-note">
                 All payments are non-refundable<br/>
@@ -2771,12 +2773,10 @@
             </div>
             <div class="gallery-sidebyside-content">
                 <div class="gallery-text">
-                    <p class="script" style="font-size: clamp(1.5rem, 3vw, 2.5rem); text-align: center;">
-                        A space to surrender.<br/>
-                        Everything is taken care of.
+                    <p class="script" style="font-size: clamp(1.5rem, 3vw, 2.5rem); text-align: center; font-family: 'Poppins', sans-serif;">
+                        A space to surrender.
                     </p>
-                    <p class="subtitle" style="line-height: 1.4; text-align: justify; margin-bottom: 1rem;">A thoughtfully curated blend of modern yoga, movement, fitness, spa rituals, ocean experiences, quiet personal time, vibrant social moments, and soulful evenings — all delivered through intuitive service that anticipates your needs before you ask.</p>
-                    <p class="subtitle" style="line-height: 1.4; text-align: justify; margin-top: 0;">You simply arrive. We handle the rest.</p>
+                    <p class="subtitle" style="line-height: 1.4; text-align: justify; margin-bottom: 1rem; font-family: 'Poppins', sans-serif;">This retreat is meticulously organized so you can arrive, settle in, and immediately exhale. From the moment you step onto the island, every detail has been thoughtfully anticipated; the structure is present — quietly held in the background — so you can move through your days with that rare feeling of being fully held.</p>
                 </div>
             </div>
         </div>
