--- a/index.html
+++ b/index.html
@@ -2720,16 +2720,20 @@
                 Complete full payment before January 31 & enter the draw to Win this retreat back!
             </div>
             <div class="pricing-ctas">
-                <a href="#" class="pricing-cta pricing-cta-primary" onclick="openBookingForm('Full Payment', 'https://yoginomads.eu/cart/51493884985627:1?checkout'); return false;">
-                    Pay it Fully
-                </a>
-                <a href="#" class="pricing-cta pricing-cta-secondary" onclick="openBookingForm('30% Deposit', 'https://yoginomads.eu/cart/51493883937051:1?checkout'); return false;">
-                    Secure your Spot with 30%
-                </a>
+                <div style="flex: 1; display: flex; flex-direction: column;">
+                    <a href="#" class="pricing-cta pricing-cta-primary" onclick="openBookingForm('Full Payment', 'https://yoginomads.eu/cart/51493884985627:1?checkout'); return false;">
+                        Pay it Fully
+                    </a>
+                </div>
+                <div style="flex: 1; display: flex; flex-direction: column;">
+                    <a href="#" class="pricing-cta pricing-cta-secondary" onclick="openBookingForm('30% Deposit', 'https://yoginomads.eu/cart/51493883937051:1?checkout'); return false;">
+                        Secure your Spot with 30%
+                    </a>
+                    <p style="text-align: center; margin-top: 0.5rem; font-size: 0.9rem; color: var(--warm-taupe); font-family: 'Poppins', sans-serif;">
+                        confirm your spot & complete payment 45 days before retreat begins
+                    </p>
+                </div>
             </div>
-            <p style="text-align: center; margin-top: 2rem; margin-bottom: 1rem; font-size: 0.9rem; color: var(--warm-taupe); font-family: 'Poppins', sans-serif;">
-                confirm your spot & complete payment 45 days before retreat begins
-            </p>
             <div class="pricing-amount" style="margin-top: 1.5rem; padding-top: 2rem; border-top: 1px solid var(--sand);">
                 <div class="pricing-current">$2,175 <span>USD</span></div>
                 <div class="pricing-per">per person</div>
