--- a/index.html
+++ b/index.html
@@ -573,6 +573,10 @@
             object-fit: cover;
         }
 
+        .hero-bg video {
+            display: none;
+        }
+
         .hero-overlay {
             position: absolute;
             inset: 0;
@@ -2235,7 +2239,7 @@
 
             .hero-eyebrow {
                 margin-top: -120px;
-                font-size: clamp(1.4rem, 3.5vw, 2.2rem);
+                font-size: clamp(1.26rem, 3.15vw, 1.98rem);
                 white-space: nowrap;
                 max-width: 100%;
                 overflow: hidden;
@@ -2250,6 +2254,17 @@
             .hero-bg {
                 top: -7rem;
                 height: calc(100% + 7rem);
+            }
+
+            .hero-bg img {
+                display: none;
+            }
+
+            .hero-bg video {
+                display: block;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
             }
 
             .founder-stats {
@@ -2299,6 +2314,9 @@
     <section class="hero">
         <div class="hero-bg">
             <img src="IMG_7423.webp" alt="Maldives aerial view of turquoise lagoon" fetchpriority="high" loading="eager"/>
+            <video autoplay muted loop playsinline preload="auto" class="hero-bg-video">
+                <source src="Xx.mp4" type="video/mp4">
+            </video>
         </div>
         <div class="hero-overlay"></div>
         
