--- a/index.html
+++ b/index.html
@@ -2135,8 +2135,8 @@
 
         @media (max-width: 768px) {
             .early-bird-banner {
-                padding: 0.3rem 0.46rem;
-                font-size: 0.74rem;
+                padding: 0.33rem 0.506rem;
+                font-size: 0.814rem;
                 line-height: 1.3;
             }
 
@@ -2314,7 +2314,7 @@
     <section class="hero">
         <div class="hero-bg">
             <img src="IMG_7423.webp" alt="Maldives aerial view of turquoise lagoon" fetchpriority="high" loading="eager"/>
-            <video autoplay muted loop playsinline preload="auto" class="hero-bg-video">
+            <video autoplay loop playsinline preload="auto" class="hero-bg-video">
                 <source src="Xx.mp4" type="video/mp4">
             </video>
         </div>
