--- a/index.html
+++ b/index.html
@@ -2314,7 +2314,7 @@
     <section class="hero">
         <div class="hero-bg">
             <img src="IMG_7423.webp" alt="Maldives aerial view of turquoise lagoon" fetchpriority="high" loading="eager"/>
-            <video autoplay loop playsinline preload="auto" class="hero-bg-video">
+            <video autoplay muted loop playsinline preload="auto" class="hero-bg-video">
                 <source src="Xx.mp4" type="video/mp4">
             </video>
         </div>
